objects/adapps__OptimizerPlus_Custom_Profiles_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Custom_Profiles__c</fullName>
        <label>Custom Profile</label>
        <referenceTo>adapps__OptimizerPlus_Custom_Profiles__c</referenceTo>
        <relationshipLabel>Custom Profile Items</relationshipLabel>
        <relationshipName>Custom_Profiles_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Profile_Name__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Custom Profile Item</label>
    <nameField>
        <label>Profile Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Profile Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>